[chore] #1 - Development environment setting
fix bug

--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         github-token: ${{ secrets.MY_GITHUB_TOKEN }}
         script: |
-          const response = await octokit.request('GET /repos/{owner}/{repo}/contents/{path}', {
+          const response = await github.rest.repos.getContent({
             owner: context.repo.owner,
             repo: context.repo.repo,
             path: 'app'
