--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -22,8 +22,10 @@ jobs:
             repo: context.repo.repo,
             path: 'app'
           });
+          const fileNames = response.data.map((file) => file.name);
+          console.log(fileNames);
           return {
-            files: response.data.map((file) => file.name)
+            files: fileNames
           };
           
     - name: Build and Push Docker Images
@@ -32,8 +34,8 @@ jobs:
         DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
       run: |
         for file in "${{ steps.file_list.outputs.files }}"; do
-          IMAGE_NAME="taeng0204/example"
-          docker build -t $IMAGE_NAME --build-arg FILE_NAME=example.py .
+          IMAGE_NAME="taeng0204/${file%.*}"
+          docker build -t $IMAGE_NAME --build-arg FILE_NAME=$file .
           docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
           docker push $IMAGE_NAME
         done
