[fix] #3 workflow bug fix

--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -34,7 +34,7 @@ jobs:
         DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
       run: |
         for file in ${{ steps.file_list.outputs.files }}; do
-          echo $file
+          echo "current file: $file"
           IMAGE_NAME="***/${file%.*}"
           docker build -t $IMAGE_NAME --build-arg FILE_NAME=$file .
           docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
