--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -31,12 +31,11 @@ jobs:
         DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
       run: |
-        for file in ${{ steps.file_list.outputs.files }}; do
+        for file in ${{ steps.file_list.outputs.files }} | tr -d '[],'; do
           echo "current file: $file"
           IMAGE_NAME="***/${file%.*}"
           docker build -t $IMAGE_NAME --build-arg FILE_NAME=$file .
           docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
           docker push $IMAGE_NAME
         done
-
-
+        
