--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -31,7 +31,7 @@ jobs:
         DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
       run: |
-        for file in ${{ steps.file_list.outputs.files }} | tr -d '[],'; do
+        for file in $(echo "${{ steps.file_list.outputs.files }}" | tr -d '[],'); do
           echo "current file: $file"
           IMAGE_NAME="***/${file%.*}"
           docker build -t $IMAGE_NAME --build-arg FILE_NAME=$file .
