--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -32,7 +32,7 @@ jobs:
         DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
       run: |
         echo "file names: ${{ steps.file_list.outputs.files }}" 
-        for file in ${${{ steps.file_list.outputs.files }}//[\[\],\']/}; do
+        for file in ${{ steps.file_list.outputs.files }}; do
           echo "current file: $file"
           IMAGE_NAME="***/${file%.*}"
           docker build -t $IMAGE_NAME --build-arg FILE_NAME=$file .
