[Chore] #8 Deploy Refactoring

--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -2,6 +2,8 @@ name: Build and Push Docker Images
 
 on:
   push:
+    paths:
+      - "Dockerfile"
     branches: [ main ]
 
 jobs:
@@ -11,32 +13,12 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v2
       
-    - name: Get File List
-      id: file_list
-      uses: actions/github-script@v6
-      with:
-        github-token: ${{ secrets.MY_GITHUB_TOKEN }}
-        script: |
-          const response = await github.rest.repos.getContent({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            path: 'app'
-          });
-          const fileNames = response.data.map((file) => file.name).join(",");
-          console.log(fileNames);
-          core.setOutput("files", fileNames);
-          
     - name: Build and Push Docker Images
       env:
         DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
       run: |
-        echo "file names: ${{ steps.file_list.outputs.files }}" 
-        IFS=',' read -ra file_list <<< "${{ steps.file_list.outputs.files }}"
-        for file in "${file_list[@]}"; do
-          echo "current file: $file"
-          IMAGE_NAME="taeng0204/${file%.*}"
-          docker build -t $IMAGE_NAME --build-arg FILE_NAME=$file .
-          docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
-          docker push $IMAGE_NAME
-        done
+        IMAGE_NAME="taeng0204/crawling"
+        docker build -t $IMAGE_NAME .
+        docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
+        docker push $IMAGE_NAME
