[Fix] hot fix - docker compose TZ & nginx port

--- a/volume/nginx.conf
+++ b/volume/nginx.conf
@@ -16,10 +16,9 @@ http {
         server crawling_api:8000;
     }
     server {
-        listen 5116;
-        server_name localhost;
+        listen 80;
         location / {
-            proxy_pass         http://frontend;
+            proxy_pass         http://frontend/;
             proxy_redirect     off;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
