--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,10 +34,12 @@ services:
     container_name: melon_boygroup_crawling
     environment:
       - FILE_NAME=melon_boy.py
+      - TZ=Asia/Seoul
   melon_girlgroup_crawling:
     image: taeng0204/crawling
     container_name: melon_girlgroup_crawling
     environment:
       - FILE_NAME=melon_girl.py
+      - TZ=Asia/Seoul
     depends_on:
       - crawling_db
