--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -2,6 +2,10 @@ name: Build and Push Docker Images
 
 on:
   push:
+    paths:
+      - ".github"
+      - "app"
+      - "modules"
     branches: [ main ]
 
 jobs:
