--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,11 +33,11 @@ services:
     image: taeng0204/crawling
     container_name: melon_boygroup_crawling
     environment:
-      - FILE_NAME=melon_boy.py
+      - FILE_NAME=melon_boygroup.py
       - TZ=Asia/Seoul
   melon_girlgroup_crawling:
     image: taeng0204/crawling
     container_name: melon_girlgroup_crawling
     environment:
-      - FILE_NAME=melon_girl.py
+      - FILE_NAME=melon_girlgroup.py
       - TZ=Asia/Seoul
