[chore] bug fix

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,13 +31,19 @@ services:
       - 8888
   melon_boygroup_crawling:
     image: taeng0204/crawling
-    container_name: melon_boygroup_crawling
+    container_name: melon_boygroup
     environment:
       - FILE_NAME=melon_boygroup.py
       - TZ=Asia/Seoul
   melon_girlgroup_crawling:
     image: taeng0204/crawling
-    container_name: melon_girlgroup_crawling
+    container_name: melon_girlgroup
     environment:
       - FILE_NAME=melon_girlgroup.py
+      - TZ=Asia/Seoul
+  youtube_crawling:
+    image: taeng0204/crawling
+    container_name: youtube_crawling
+    environment:
+      - FILE_NAME=youtube.py
       - TZ=Asia/Seoul
