[Chore] create dev environment

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,15 +35,15 @@ services:
     environment:
       - FILE_NAME=melon_boygroup.py
       - TZ=Asia/Seoul
+    volumes:
+      - ./app:/usr/src/app
+      - ./requirements.txt:/usr/src/requirements.txt
   melon_girlgroup_crawling:
     image: taeng0204/crawling
     container_name: melon_girlgroup
     environment:
       - FILE_NAME=melon_girlgroup.py
       - TZ=Asia/Seoul
-  youtube_crawling:
-    image: taeng0204/crawling
-    container_name: youtube_crawling
-    environment:
-      - FILE_NAME=youtube.py
-      - TZ=Asia/Seoul
+    volumes:
+      - ./app:/usr/src/app
+      - ./requirements.txt:/usr/src/requirements.txt
