--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -47,3 +47,12 @@ services:
     volumes:
       - ./app:/usr/src/app
       - ./requirements.txt:/usr/src/requirements.txt
+  youtube_crawling:
+    image: taeng0204/crawling
+    container_name: youtube_crawling
+    environment:
+      - FILE_NAME=youtube.py
+      - TZ=Asia/Seoul
+    volumes:
+      - ./app:/usr/src/app
+      - ./requirements.txt:/usr/src/requirements.txt
