--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -7,11 +7,11 @@ services:
     expose:
       - 27017
     restart: always
-  youtube_crawling:
+  example_crawling:
     image: taeng0204/crawling
-    container_name: youtube_crawling
+    container_name: example_crawling
     environment:
-      - FILE_NAME=youtube.py
+      - FILE_NAME=example.py
       - TZ=Asia/Seoul
     volumes:
       - ./app:/usr/src/app
