--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,24 +29,22 @@ services:
     container_name: crawling_dashboard
     expose:
       - 8888
-  melon_boygroup_crawling:
+  melon_boy_crawling:
     image: taeng0204/crawling
-    container_name: melon_boygroup
+    container_name: melon_boy
     environment:
-      - FILE_NAME=melon_boygroup.py
+      - FILE_NAME=melon_boy.py
       - TZ=Asia/Seoul
     volumes:
-      - ./app:/usr/src/app
-      - ./requirements.txt:/usr/src/requirements.txt
-  melon_girlgroup_crawling:
+      - ./app/melon_boy:/usr/src/app/melon_boy
+  melon_girl_crawling:
     image: taeng0204/crawling
-    container_name: melon_girlgroup
+    container_name: melon_girl
     environment:
-      - FILE_NAME=melon_girlgroup.py
+      - FILE_NAME=melon_girl.py
       - TZ=Asia/Seoul
     volumes:
-      - ./app:/usr/src/app
-      - ./requirements.txt:/usr/src/requirements.txt
+      - ./app/melon_girl:/usr/src/app/melon_girl
   youtube_girl_light:
     image: taeng0204/crawling
     container_name: youtube_girl_light
@@ -54,8 +52,7 @@ services:
       - FILE_NAME=youtube_girl_light.py
       - TZ=Asia/Seoul
     volumes:
-      - ./app:/usr/src/app
-      - ./requirements.txt:/usr/src/requirements.txt      
+      - ./app/youtube_girl_light:/usr/src/app/youtube_girl_light    
   youtube_girl_heavy:
     image: taeng0204/crawling
     container_name: youtube_girl_heavy
@@ -63,8 +60,7 @@ services:
       - FILE_NAME=youtube_girl_heavy.py
       - TZ=Asia/Seoul
     volumes:
-      - ./app:/usr/src/app
-      - ./requirements.txt:/usr/src/requirements.txt      
+      - ./app/youtube_girl_heavy:/usr/src/app/youtube_girl_heavy   
   youtube_boy_light:
     image: taeng0204/crawling
     container_name: youtube_boy_light
@@ -72,8 +68,7 @@ services:
       - FILE_NAME=youtube_boy_light.py
       - TZ=Asia/Seoul
     volumes:
-      - ./app:/usr/src/app
-      - ./requirements.txt:/usr/src/requirements.txt      
+      - ./app/youtube_boy_light:/usr/src/app/youtube_boy_light   
   youtube_boy_heavy:
     image: taeng0204/crawling
     container_name: youtube_boy_heavy
@@ -81,5 +76,4 @@ services:
       - FILE_NAME=youtube_boy_heavy.py
       - TZ=Asia/Seoul
     volumes:
-      - ./app:/usr/src/app
-      - ./requirements.txt:/usr/src/requirements.txt      
+      - ./app/youtube_boy_heavy:/usr/src/app/youtube_boy_heavy 
