--- a/.github/workflows/deploy-crawler.yml
+++ b/.github/workflows/deploy-crawler.yml
@@ -3,7 +3,7 @@ name: Deploy
 on:
   push:
     paths:
-      - 'app'
+      - 'app/**'
     branches:
       - main
 
@@ -23,8 +23,8 @@ jobs:
 
       - name: Git pull
         run: |
-          ssh ${{ secrets.USERNAME }}@${{ secrets.HOST }} -p 5115 "cd /path/to/repository && git pull"
+          ssh ${{ secrets.USERNAME }}@${{ secrets.HOST }} -p 5115 "cd /home/crawler/Desktop/LLOYDK-Crawler/ && git pull"
 
       - name: Docker Compose up
         run: |
-          ssh ${{ secrets.USERNAME }}@${{ secrets.HOST }} -p 5115 "cd /path/to/repository && docker compose up -d"
+          ssh ${{ secrets.USERNAME }}@${{ secrets.HOST }} -p 5115 "cd /home/crawler/Desktop/LLOYDK-Crawler/ && docker compose up -d"
