--- a/.github/workflows/deploy-crawler.yml
+++ b/.github/workflows/deploy-crawler.yml
@@ -20,11 +20,12 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
+          port: ${{ secrets.PORT }}
 
       - name: Git pull
         run: |
-          ssh ${{ secrets.USERNAME }}@${{ secrets.HOST }} -p 5115 "cd /home/crawler/Desktop/LLOYDK-Crawler/ && git pull"
+          ssh ${{ secrets.USERNAME }}@${{ secrets.HOST }} -p ${{ secrets.PORT }} "cd /home/crawler/Desktop/LLOYDK-Crawler/ && git pull"
 
       - name: Docker Compose up
         run: |
-          ssh ${{ secrets.USERNAME }}@${{ secrets.HOST }} -p 5115 "cd /home/crawler/Desktop/LLOYDK-Crawler/ && docker compose up -d"
+          ssh ${{ secrets.USERNAME }}@${{ secrets.HOST }} -p ${{ secrets.PORT }} "cd /home/crawler/Desktop/LLOYDK-Crawler/ && docker compose up -d"
