--- a/.github/workflows/crawler-image.yml
+++ b/.github/workflows/crawler-image.yml
@@ -5,7 +5,8 @@ on:
     paths:
       - 'Dockerfile.crawler'
       - 'app/**'
-    branches: [ main ]
+      - '.github/workflows/crawler-image-dev.yml'
+    branches: [ dev ]
 
 jobs:
   check_file_changes:
@@ -15,22 +16,19 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v2
 
-      - name: List modified folders
+      - name: List modified files
         id: list_changes
         run: |
-          git diff --name-only HEAD^ HEAD | awk -F'/' '{print $2}' | uniq
-          echo "::set-output name=folders::$(cat ${{ github.workspace }}/modified_folders.txt)"
+          git diff --name-only HEAD~1 HEAD
+          echo "::set-output name=changes::$(git diff --name-only HEAD~1 HEAD)"
 
-      - name: Read modified folder names
-        id: read_changes
+      - name: Extract modified folders
+        id: extract_folders
         run: |
-          echo ${{ steps.list_changes.outputs.folders }} > ${{ github.workspace }}/modified_folders.txt
+          echo "${{ steps.list_changes.outputs.changes }}" | awk -F'/' '{print $2}' | uniq | tee ${{ github.workspace }}/modified_folders.txt
 
-      - name: Build Docker images
-        id: build_images
-        run: |
-          IFS=$'\n' read -d '' -ra FOLDERS < ${{ github.workspace }}/modified_folders.txt
-          for folder in "${FOLDERS[@]}"; do
-            echo "Building Docker image for folder: $folder"
-            docker build --build-arg NAME=$folder -t taeng0024/$folder -f Dockerfile.crawler .
-          done
+      - name: Print modified folders
+        run: cat ${{ github.workspace }}/modified_folders.txt
+
+      - name: Print modified files
+        run: echo "${{ steps.list_changes.outputs.changes }}"
