--- a/.github/workflows/crawler-image-dev.yml
+++ b/.github/workflows/crawler-image-dev.yml
@@ -5,7 +5,6 @@ on:
     paths:
       - 'Dockerfile.crawler'
       - 'app/**'
-      - '.github/workflows/crawler-image-dev.yml'
     branches: [ dev ]
 
 jobs:
@@ -18,19 +17,22 @@ jobs:
         with:
           fetch-depth: 2
 
-      - name: List modified files
+      - name: List modified folders
         id: list_changes
         run: |
-          git diff --name-only HEAD~1 HEAD
-          echo "::set-output name=changes::$(git diff --name-only HEAD~1 HEAD)"
+          git diff --name-only HEAD^ HEAD | awk -F'/' '{print $2}' | uniq
+          echo "::set-output name=folders::$(cat ${{ github.workspace }}/modified_folders.txt)"
 
-      - name: Extract modified folders
-        id: extract_folders
+      - name: Read modified folder names
+        id: read_changes
         run: |
-          echo "${{ steps.list_changes.outputs.changes }}" | awk -F'/' '{print $2}' | uniq | tee ${{ github.workspace }}/modified_folders.txt
+          echo "Modified folders: ${{ steps.list_changes.outputs.folders }}" >> ${{ github.workspace }}/modified_folders.txt
 
-      - name: Print modified folders
-        run: cat ${{ github.workspace }}/modified_folders.txt
-
-      - name: Print modified files
-        run: echo "${{ steps.list_changes.outputs.changes }}"
+      - name: Build Docker images
+        id: build_images
+        run: |
+          IFS=' ' read -ra FOLDERS <<< ${{ steps.list_changes.outputs.folders }}
+          for folder in "${FOLDERS[@]}"; do
+            echo "Building Docker image for folder: $folder"
+            docker build -t mydockerregistry/myimage:$folder ./app/$folder
+          done
