--- a/.github/workflows/crawler-image.yml
+++ b/.github/workflows/crawler-image.yml
@@ -5,8 +5,7 @@ on:
     paths:
       - 'Dockerfile.crawler'
       - 'app/**'
-      - '.github/workflows/crawler-image-dev.yml'
-    branches: [ dev ]
+    branches: [ main ]
 
 jobs:
   check_file_changes:
@@ -15,20 +14,26 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
 
-      - name: List modified files
+      - name: List modified folders
         id: list_changes
         run: |
-          git diff --name-only HEAD~1 HEAD
-          echo "::set-output name=changes::$(git diff --name-only HEAD~1 HEAD)"
+          git diff --name-only HEAD^ HEAD | awk -F'/' '{print $2}' | uniq
+          echo "::set-output name=folders::$(cat ${{ github.workspace }}/modified_folders.txt)"
 
-      - name: Extract modified folders
-        id: extract_folders
+      - name: Read modified folder names
+        id: read_changes
         run: |
-          echo "${{ steps.list_changes.outputs.changes }}" | awk -F'/' '{print $2}' | uniq | tee ${{ github.workspace }}/modified_folders.txt
+          echo "Modified folders: ${{ steps.list_changes.outputs.folders }}"
+          echo "${{ steps.list_changes.outputs.folders }}" >> ${{ github.workspace }}/modified_folders.txt
 
-      - name: Print modified folders
-        run: cat ${{ github.workspace }}/modified_folders.txt
-
-      - name: Print modified files
-        run: echo "${{ steps.list_changes.outputs.changes }}"
+      - name: Build Docker images
+        id: build_images
+        run: |
+          FOLDERS=(${{ steps.list_changes.outputs.folders }})
+          for folder in "${FOLDERS[@]}"; do
+            echo "Building Docker image for folder: $folder"
+            docker build --build-arg NAME=$folder -t taeng0204/$folder -f Dockerfile.crawler .
+          done
